--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,10 +8,19 @@
     <string name="title_section4">Settings</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_example">Example action</string>
-    <string name="action_settings">Settings</string>
     <string name="previous">\u003C</string>
     <string name="first">|\u003C</string>
+    <string name="randombutton">Random Comic</string>
+    <string name="explainbutton">Explain</string>
+    <string name="listbutton">Display As List</string>
+    <string name="browserbutton">Open In Browser</string>
+    <string name="refreshbutton">Refresh</string>
+    <string name="sharebutton">Share</string>
+    <string name="abouttext">\u00a9 2014  David Margolin
+            \n\nEmail\ntrickedoutdavid@gmail.com
+            \nGoogle+\nhttp://goo.gl/d8pHp0
+            \n\nLibraries Used:\nJsoup \nPicasso
+            \n\n    All brand and product names and associated logos contained within this application belong to their respective owners and are protected by copyright.</string>
     <string name="last">>|</string>
     <string name="next">></string>
     <string-array name="themevalues">
